--- a/articles/1-execute-cmd-and-entity-layer/1.1-entity-layer.md
+++ b/articles/1-execute-cmd-and-entity-layer/1.1-entity-layer.md
@@ -16,14 +16,18 @@ execute @p ~~~ execute @e[type=item,c=3] ~~~ execute @e[type=creeper,r=2] ~~~ ..
   E  F x    G  - @e[type=creeper,r=2]
       ...
 ```
+&emsp;&emsp;对于其中任一层execute嵌套产生的所有分支，我们将该分支引用到的所有实体构成的多重集合称为一个**实体层**（Entity Layer）。如果对于两个由不同的指令创建的实体层，其包含的实体与计数均相等，我们称这两个实体层**全等**。
 
-&emsp;&emsp;对于其中任一层execute嵌套产生的所有分支，我们将该分支引用到的所有实体构成的多重集合称为一个**实体层**（Entity Layer）。
+&emsp;&emsp;若命令方块为初始执行者，那么命令块所在实体层我们将其称为**第零实体层**（Initial Layer）。
 
-&emsp;&emsp;实体层是对于执行者修改或涉及到基于实体创建执行分支的抽象描述。对于旧版，执行者、执行位置、执行朝向的实体层无法分割，但新版中，此三者可分。as、positioned as、rotated as、at等子命令均创建了对应的实体层。在下文中，若无特殊描述，“实体层”均指旧版实体层，即对应于新版``as <selector> at @s``的实体层。
+&emsp;&emsp;实体层是对于执行者修改或涉及到基于实体创建执行分支的抽象描述。对于旧版，执行者、执行位置、执行朝向的实体层无法分割，但新版中，此三者可分。``as``、``positioned as``、``rotated as``、``at``等子命令均创建了对应的实体层。在下文中，若无特殊描述，“实体层”均指旧版实体层，即对应于新版``as <selector> at @s``的实体层。
+
+&emsp;&emsp;需要注意的是，实体层同时也代表了执行位置、朝向等执行参数，这些参数被隐含于实体层包含的实体内。
 
 ## 1.1.2 自指实体层
-&emsp;&emsp;**本段落所述内容可能不适用于当前版本**
-
 &emsp;&emsp;对于那些嵌套了execute却不直接修改执行者或分支，而是通过@s对本实体层内实体分支进行筛选与选择性截断的，我们将这类特殊的实体层称为**自指实体层**（Self-reference Entity Layer）。
 
 &emsp;&emsp;在新版中，自指实体层完全可以使用``if entity @s``来实现。虽然写法完全不同，但是仍沿用“自指实体层”名称，并将其推广至所有涉及到自身的if/unless判定，如``if score @s itemCtr = THRESHOLD itemCtr``。
+
+## 1.1.3 判定实体层
+&emsp;&emsp;判定实体层是对于所有``if``/``unless``判定子命令的抽象。判定实体层不是一个实际上的实体层，因为其并未事实上地修改任一执行时的参数。它只是根据所给条件对执行分支进行截断。
