--- a/articles/1-execute-cmd-and-entity-layer/1.2-execute-context.md
+++ b/articles/1-execute-cmd-and-entity-layer/1.2-execute-context.md
@@ -1,5 +1,5 @@
 # 1.2 执行上下文
-&emsp;&emsp;执行上下文是两个概念的组合：执行上文与执行下文。执行上下文用于表述一个实体如何被一个实体层引用或引用另一个实体。与实体层不同的是，执行上下文仅与执行者相关，而不存在
+&emsp;&emsp;执行上下文是两个概念的组合：执行上文与执行下文。执行上下文用于表述一个实体如何被一个实体层引用或引用另一个实体。
 
 ## 1.2.1 执行上文
 &emsp;&emsp;对于一个实体层中的
