--- a/articles/2-selector-and-filter/2.1-hcst-filter.md
+++ b/articles/2-selector-and-filter/2.1-hcst-filter.md
@@ -1,16 +1,35 @@
-# 2.1 HCST筛选器
-&emsp;&emsp;HCST-DAT中的筛选器指<span style="text-decoration-line: underline; text-decoration-style: wavy;">一系列可以选择出某一些实体的按顺序执行的命令或嵌套的execute子命令</span>。
+# 2.1 选择器与HCST筛选器
+&emsp;&emsp;HCST-DAT中的筛选器指一系列可以选择出某一些实体的按顺序执行的命令或嵌套的execute子命令。
 
 ## 2.1.1 概念
-&emsp;&emsp;筛选器与选择器并不同。选择器是筛选器的基础，可看作一个全体实体构成的集合到全体实体构成的集合的幂集的映射。而筛选器是按照一系列逻辑将多个选择器的结果进行运算后得出的一个多重集合。
+&emsp;&emsp;筛选器与选择器并不同。选择器是筛选器的基础，而筛选器是按照一系列逻辑将多个选择器的结果进行运算后得出的一个多重集合。
 
 &emsp;&emsp;选择器是筛选器的子集。
 
 ## 2.1.2 执行者关联性
-&emsp;&emsp;执行者关联性指筛选器的结果是否与其初始的执行者或执行位置有关。
+&emsp;&emsp;执行者关联性指选择器的结果是否与其初始的执行者或执行位置有关。
 
-&emsp;&emsp;如``@e[name=HTMonkeyG]``、``@a``等，不管执行者或者位置如何，在同一gt内执行时，在其他指令不对其全体实体进行修改的情况下，始终保持不变。此类筛选器我们称其与**执行者无关**。
+&emsp;&emsp;如``@e[name=HTMonkeyG]``、``@a``等，不管执行者或者位置如何，在同一gt内执行时，在其他指令不对全体实体进行修改的情况下，其结果始终保持不变。此类选择器我们称其与**执行者无关**。而对于``@e[r=3]``、``@p``等，其结果在上述条件中随执行者变化而变化，那么这类选择器就是**执行者有关**的。
 
-&emsp;&emsp;而对于``@e[r=3]``、``@p``等，其结果在上述条件中随执行者变化而变化，那么这类筛选器就是**执行者有关**的。
+&emsp;&emsp;对于一个存在较多参数的选择器，我们将其与执行者有关的参数称为其**执行者有关部分**，另外的称为**执行者无关部分**。
 
 &emsp;&emsp;在下文叙述中，对于一些执行者无关的筛选器或选择器，我们直接将其作为一个固定集合表述。
+
+## 2.1.3 选择器函数
+&emsp;&emsp;对于一个MCBE选择器，我们可以将其看作一个全体实体构成的集合（其中的元素为执行者）到全体实体构成的集合的幂集（选择结果）的集值映射：
+$$
+s: @e \to P(@e)，
+$$
+这里的映射规则$s$便是**选择器函数**。事实上其并非严格定义上的函数，将其称为“函数”是历史遗留问题。
+
+&emsp;&emsp;选择器函数（筛选器函数）的写法类似$s(a)$，其中a为执行者，其结果为一个集合。
+
+&emsp;&emsp;我们还可定义这样一个函数：
+$$
+s_c(a,b)=\begin{cases}
+1,b \in s(a)
+\\
+0,b \notin s(a)
+\end{cases}，
+$$
+称为**选择器条件函数**。其用于表述选择器的执行者与被选实体之间的关系。
