Changed formular formatting

--- a/articles/2-selector-and-filter/2.2-normal-invert-and-inverse-selection.md
+++ b/articles/2-selector-and-filter/2.2-normal-invert-and-inverse-selection.md
@@ -4,16 +4,16 @@
 ## 2.2.1 正选与反选
 &emsp;&emsp;正选是选择器最基础的类型。每一个独立的选择器都是其本身的正选。
 
-&emsp;&emsp;一个选择器的反选是另一个选择结果为前者的补集的选择器：$S_i(a) = \complement_{@e} S(a)$，也可使用`unless entity`子命令达到相同效果。
+&emsp;&emsp;一个选择器的反选是另一个选择结果为前者的补集的选择器：$`S_i(a) = \complement_{@e} S(a)`$，也可使用`unless entity`子命令达到相同效果。
 
 ## 2.2.2 逆选
 &emsp;&emsp;逆选旧称选择器方程。一个选择器的逆选是另一个结果为使用前者进行选择时可以选中另一些指定实体的实体的选择器。
 
 &emsp;&emsp;上面的表述看上去很绕，使用选择器函数进行的表述是这样的：
-$$
+```math
 S^{-1}(B) = \left \{ x \in A \mid S(x) \cap B \neq \varnothing \right \}，
-$$
-其中$A$为备选实体集，$B$为指定实体集，$S$为原始选择器。$A$与$B$均需要为执行者无关筛选器。
+```
+其中$`A`$为备选实体集，$`B`$为指定实体集，$`S`$为原始选择器。$`A`$与$`B`$均需要为执行者无关筛选器。
 
 &emsp;&emsp;逆选在某种程度上可以看作选择器函数的逆映射，但是这样并不严谨。
 
@@ -28,7 +28,7 @@ execute as <A> at @s if entity <S> ...
 
 **例 2.2.3-1**&emsp;选择半径100格内存在苦力怕的创造模式玩家：
 
-**解**&emsp;备选实体集$A=@e[m=c]$，指定实体集$B=@e[type=creeper]$，原始选择器$S=@e[r=100]$。代入上述指令得：
+**解**&emsp;备选实体集$`A=@e[m=c]`$，指定实体集$`B=@e[type=creeper]`$，原始选择器$S=@e[r=100]$。代入上述指令得：
 ```
 execute as @e[m=c] at @s if entity @e[type=creeper,r=100] ...
 ```
@@ -50,7 +50,7 @@ execute as <A> at @s at <S> if entity @e[r=0.25,c=1,<B>] at @s ...
 
 **例 2.2.3-2**&emsp;选择距离最近的玩家是HTMonkeyG的蝙蝠：
 
-**解**&emsp;备选实体集$A=@e[type=bat]$，指定实体集$B=@a[name=HTMonkeyG]$，原始选择器$S=@p$。代入上述指令得：
+**解**&emsp;备选实体集$`A=@e[type=bat]`$，指定实体集$`B=@a[name=HTMonkeyG]`$，原始选择器$`S=@p`$。代入上述指令得：
 ```
 execute as @e[type=bat] at @s as @p if entity @s[name=HTMonkeyG] as @e[r=0.25,c=1] at @s ...
 ```
