Changed formular formatting

--- a/articles/2-selector-and-filter/2.2-normal-invert-and-inverse-selection.md
+++ b/articles/2-selector-and-filter/2.2-normal-invert-and-inverse-selection.md
@@ -28,7 +28,7 @@ execute as <A> at @s if entity <S> ...
 
 **例 2.2.3-1**&emsp;选择半径100格内存在苦力怕的创造模式玩家：
 
-**解**&emsp;备选实体集$`A=@e[m=c]`$，指定实体集$`B=@e[type=creeper]`$，原始选择器$S=@e[r=100]$。代入上述指令得：
+**解**&emsp;备选实体集$`A=`$@e[m=c]，指定实体集$`B=`$`@e[type=creeper]`，原始选择器$`S=`$`@e[r=100]`。代入上述指令得：
 ```
 execute as @e[m=c] at @s if entity @e[type=creeper,r=100] ...
 ```
@@ -50,7 +50,7 @@ execute as <A> at @s at <S> if entity @e[r=0.25,c=1,<B>] at @s ...
 
 **例 2.2.3-2**&emsp;选择距离最近的玩家是HTMonkeyG的蝙蝠：
 
-**解**&emsp;备选实体集$`A=@e[type=bat]`$，指定实体集$`B=@a[name=HTMonkeyG]`$，原始选择器$`S=@p`$。代入上述指令得：
+**解**&emsp;备选实体集$`A=`$`@e[type=bat]`，指定实体集$`B=`$`@a[name=HTMonkeyG]`，原始选择器$`S=`$`@p`。代入上述指令得：
 ```
 execute as @e[type=bat] at @s as @p if entity @s[name=HTMonkeyG] as @e[r=0.25,c=1] at @s ...
 ```
