--- a/articles/1-execute-cmd-and-entity-layer/1.1-entity-layer.md
+++ b/articles/1-execute-cmd-and-entity-layer/1.1-entity-layer.md
@@ -16,9 +16,7 @@ execute @p ~~~ execute @e[type=item,c=3] ~~~ execute @e[type=creeper,r=2] ~~~ ..
   E  F x    G  - @e[type=creeper,r=2]
       ...
 ```
-&emsp;&emsp;对于其中任一层execute嵌套产生的所有分支，我们将该分支引用到的所有实体构成的多重集合称为一个**实体层**（Entity Layer）。如果对于两个由不同的指令创建的实体层，其包含的实体与计数均相等，我们称这两个实体层**全等**。
-
-&emsp;&emsp;若命令方块为初始执行者，那么命令块所在实体层我们将其称为**第零实体层**（Initial Layer）。
+&emsp;&emsp;对于其中任一层execute嵌套产生的所有分支，我们将该分支引用到的所有实体构成的多重集合称为一个**实体层**（Entity Layer）。如果对于两个由不同的指令创建的实体层，其包含的实体与计数均相等，我们称这两个实体层**全等**。若命令方块为初始执行者，那么命令块所在实体层我们将其称为**第零实体层**（Initial Layer）。
 
 &emsp;&emsp;实体层是对于执行者修改或涉及到基于实体创建执行分支的抽象描述。对于旧版，执行者、执行位置、执行朝向的实体层无法分割，但新版中，此三者可分。``as``、``positioned as``、``rotated as``、``at``等子命令均创建了对应的实体层。在下文中，若无特殊描述，“实体层”均指旧版实体层，即对应于新版``as <selector> at @s``的实体层。
 
