--- a/articles/2-selector-and-filter/2.2-normal-invert-and-inverse-selection.md
+++ b/articles/2-selector-and-filter/2.2-normal-invert-and-inverse-selection.md
@@ -7,15 +7,13 @@
 &emsp;&emsp;一个选择器的反选是另一个选择结果为前者的补集的选择器：$`S_i(a) = \complement_{@e} S(a)`$，也可使用`unless entity`子命令达到相同效果。
 
 ## 2.2.2 逆选
-&emsp;&emsp;逆选旧称选择器方程。一个选择器的逆选是另一个结果为使用前者进行选择时可以选中另一些指定实体的实体的选择器。
-
-&emsp;&emsp;上面的表述看上去很绕，使用选择器函数进行的表述是这样的：
+&emsp;&emsp;逆选旧称选择器方程。一个选择器的逆选是另一个结果为使用前者进行选择时可以选中另一些指定实体的实体的选择器。自然语言表述看上去很绕，使用选择器函数进行的表述是这样的：
 ```math
 S^{-1}(B) = \left \{ x \in A \mid S(x) \cap B \neq \varnothing \right \}，
 ```
-其中$`A`$为备选实体集，$`B`$为指定实体集，$`S`$为原始选择器。$`A`$与$`B`$均需要为执行者无关筛选器。
+其中$`A`$为备选实体集，$`B`$为指定实体集，$`S`$为原始选择器。$`A`$与$`B`$均需要为执行者无关选择器。
 
-&emsp;&emsp;逆选在某种程度上可以看作选择器函数的逆映射，但是这样并不严谨。
+&emsp;&emsp;逆选实际上是求选择器函数这个集值映射的原像。
 
 ## 2.2.3 逆选通解
 &emsp;&emsp;绝大多数逆选问题在旧版中是无法（通过不显式使用遍历的方法）求解的，而在新语法中，可以通过一些取巧的办法在大多数情况下求解。
@@ -44,9 +42,7 @@ execute as <A> at @s at <S> if entity @e[r=0.25,c=1,<B>] at @s ...
 ```
 &emsp;&emsp;其中A为备选实体集，B为指定实体集对应选择器的参数，S为原始选择器。
 
-&emsp;&emsp;对于上述两种解法，原理都是先使用原始选择器选出一个实体，再判定该实体是否属于指定实体集，最后通过位置实体层或者执行者等不变量将执行者改回该实体。不直接合并参数是由于合并后`c=k`操作后于所有其余操作执行导致结果出错。
-
-&emsp;&emsp;不难看出，第一种解法是后两种解法退化的结果。
+&emsp;&emsp;不难看出第一种解法是后两种解法退化的结果。对于上述两种解法，原理都是先使用原始选择器选出一个实体，再判定该实体是否属于指定实体集，最后通过位置实体层或者执行者等不变量将执行者改回该实体。不直接合并参数是由于合并后`c=k`操作后于所有其余操作执行导致结果出错。
 
 **例 2.2.3-2**&emsp;选择距离最近的玩家是HTMonkeyG的蝙蝠：
 
